chapter9/multitenant/setup/vault/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "enterprise-ca"
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: vault-ui
            port: 
              number: 8200
        path: "/"
        pathType: Prefix
    host: vault.apps.IPADDR.nip.io
  tls:
  - hosts:
    - vault.apps.IPADDR.nip.io
    secretName: vault-web-tls
